destinationPath is now being read from config.json

--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     "blacklist": [".tmp"],
     "destination": 
     { 
-      "gruppe-VirtualBox": [], 
+      "gruppe-VirtualBox": "/home/gruppe/backupTest", 
       "device2": []
     }
 }
