Errors sauberer gemacht

--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
 
   "destination":
   {
-    "gruppe-VirtualBox": "/home/gruppe/Schreibtisch/backupLocation",
+    "gruppe-VirtualBox": "meep" ,
     "kali": "/home/kali/backupLocation",
     "deviceX": [""]
   }
