ne kleine änderung

--- a/config.json
+++ b/config.json
@@ -29,7 +29,8 @@
     "gruppe-VirtualBox": "/home/gruppe/Schreibtisch/Restore",
     "kali": "/home/kali/Restore",
     "deviceX": [""],
-    "mirco-ThinkPad-T495": "/home/mirco/Backuptest"
+    "mirco-ThinkPad-T495": "/home/mirco/Backuptest",
+    "fatih": "/home/fatih/Restore"
   }
 }
 
