--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ before_script:
 
 test:
   script:
-    python miron_test_ci.py
-    python test_backup.py
+    - python miron_test_ci.py
+    - python test_backup.py
 
 run:
   script:
