--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "jewel_sources" :
   {
-    "gruppe-VirtualBox": ["/home/gruppe/backupTest/jewels", "/home/gruppe/backupTest/jewels2", "/home/peter", "/home/gruppe/backupTest/jewel3"],
+    "gruppe-VirtualBox": ["/home/gruppe/backupTest/jewels"],
     "kali": ["/home/kali/folderToBackup"],
     "deviceX": [""],
     "mirco-ThinkPad-T495": ["/home/mirco/Backuptest"],
