--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
         ],
         "testCases": [
             "/test_Files_Backup/jewel",
-            "/test_Files_Backup/jewel2"
+            "/test_Files_Backup/jewel2",
+            "/test_Files_Backup/jewel3"
         ],
         "fatih": [
             "./test_Files_Backup/jewel",
