--- a/config.json
+++ b/config.json
@@ -1,37 +1,53 @@
 {
-    "jewel_sources" :
-    {
-      "gruppe-VirtualBox": ["/home/gruppe/backupTest/jewels2", "/home/gruppe/backupTest/jewels/jewelInJewel","/home/gruppe/backupTest/jewels"],
-      "kali": ["/home/kali/folderToBackup", "/home/kali/extraFolder", "/home/kali/extraExtraFolder"],
-      "mirco-ThinkPad-T495": ["/home/mirco/Backuptest"],
-      "testCases" : ["/unitTestFiles/jewel", "/unitTestFiles/jewel2"],
-      "fedora": ["/home/ole/importantDocuments"]
+    "jewel_sources": {
+        "gruppe-VirtualBox": [
+            "./unitTestFiles/jewel",
+            "./unitTestFiles/jewel2"
+        ],
+        "kali": [
+            "/home/kali/folderToBackup",
+            "/home/kali/extraFolder",
+            "/home/kali/extraExtraFolder"
+        ],
+        "mirco-ThinkPad-T495": [
+            "/home/mirco/Backuptest"
+        ],
+        "testCases": [
+            "/test_Files_Backup/jewel",
+            "/test_Files_Backup/jewel2",
+            "/test_Files_Backup/jewel3"
+        ],
+        "fedora": [
+            "/home/ole/importantDocuments"
+        ]
     },
-  
-    "blacklist" :
-    {
-      "directories": ["folderToIgnore1", "folderToIgnore2"],
-      "extensions": [".tmp", ".html"],
-      "files": ["fileToIgnore1.png", "fileToIgnore2.jpg", "fileToIgnore.txt"]
+    "blacklist": {
+        "directories": [
+            "folderToIgnore1",
+            "folderToIgnore2"
+        ],
+        "extensions": [
+            ".tmp",
+            ".html"
+        ],
+        "files": [
+            "fileToIgnore1.png",
+            "fileToIgnore2.jpg",
+            "fileToIgnore.txt"
+        ]
     },
-  
-    "destination":
-    {
-      "gruppe-VirtualBox": "/home/gruppe/Schreibtisch/backupLocation",
-      "kali": "/home/kali/backupLocation",
-      "mirco-ThinkPad-T495": "/home/mirco/backuptarget",
-      "testCases" : "unitTestFiles/backupLocation",
-      "fedora": "/home/ole/backupLocation"
+    "destination": {
+        "gruppe-VirtualBox": "/home/gruppe/Schreibtisch/backupLocation",
+        "kali": "/home/kali/backupLocation",
+        "mirco-ThinkPad-T495": "/home/mirco/backuptarget",
+        "testCases": "test_Files_Backup/backup_Location",
+        "fedora": "/home/ole/backupLocation"
     },
-  
-    "restore_destination":
-    {
-      "gruppe-VirtualBox": "/home/gruppe/Schreibtisch/Restore",
-      "kali": "/home/kali/Restore",
-      "mirco-ThinkPad-T495": "/home/mirco/Backuprestore",
-      "testCases": "unitTestFiles/restoreLocation",
-      "fedora": "/home/ole/restoreDestination"
+    "restore_destination": {
+        "gruppe-VirtualBox": "/home/gruppe/Schreibtisch/Restore",
+        "kali": "/home/kali/Restore",
+        "mirco-ThinkPad-T495": "/home/mirco/Backuprestore",
+        "testCases": "test_Files_Backup/restore_Location",
+        "fedora": "/home/ole/restoreDestination"
     }
-  }
-  
-  
+}
