--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,5 @@ test_Files_Backup/backup_Location/*
 test_Files_Backup/jewel/*
 test_Files_Backup/jewel2/*
 test_Files_Backup/jewel3/*
+unitTestFiles/jewel/test1.txt
+
