Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,9 @@ test:
     # Das funktioniert nicht so, wie es soll, es kommt zu keiner assertion, obwohl hier ja ein Fehler vorliegt, siehe Log
     #-python test_backup.py
     - python -m unittest test_backup.py -v
-    - python -m unittest test_backup_2.py -v
+    # - python -m unittest test_backup_2.py -v
+    - python3 test_backup_2.py -p
+    - python3 test_restore.py -p
     - python -m unittest test_database.py -v
 
 run:
